# learn-linux

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md
src/cmd/mem_size/: main.c
src/cmd/page_size/: main.c
src/lib/hello/hi/: hi.c  hi.h
src/lib/math/: math.c  math.h
test/: test.cpp
test/lib/hello/: hello_test.cpp
test/lib/math/: math_test.cpp
